--- a/src/App.css
+++ b/src/App.css
@@ -166,3 +166,105 @@ h6 {
   }
 }
 /* end of single room*/
+
+.error {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.info-fragment {
+  background-image: linear-gradient(#0e2f51, #84a0d4);
+  height: 80vw;
+}
+
+.info {
+  display: flex;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.sections-position {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 100px 100px;
+  grid-column-gap: 30px;
+  grid-row-gap: 50px;
+}
+
+.section-container h4 {
+  padding: 10px 70px;
+  background-color: #af9a7d;
+  cursor: pointer;
+}
+
+.section-container h4:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+}
+
+.section-info {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 20px 40px;
+}
+
+.section-info:hover {
+  background-color: #af9a7d;
+  color: black;
+}
+
+.section-info.in {
+  display: block;
+}
+
+.section-info.out {
+  display: none;
+}
+
+.contact-background {
+  background-image: url("./images/reception.jpeg");
+  background-size: cover;
+  height: 100vh;
+}
+
+.contact {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.contact-form {
+  margin: 50px 20px;
+}
+
+.contact h3 {
+  text-align: center;
+  margin-top: 30px;
+  color: #af9a7d;
+  letter-spacing: var(--mainSpacing);
+}
+
+.contact-form-center {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-form-center label {
+  padding: 20px 10px;
+  color: white;
+  letter-spacing: var(--mainSpacing);
+}
+
+.contact-form-center input {
+  padding: 10px 10px;
+  transition: var(--mainTransition);
+}
+
+.contact-form-center input:focus {
+  border: 2px solid #af9a7d;
+  transform: scale(1.4, 1.4);
+}
